# 5-letter-bot

./: README.md  main.py  pyproject.toml
config/: russian-5-w.utf-8
src/: config.py  main.py
src/core/: exceptions.py
src/handlers/: game.py  main.py
